--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
+    "date-fns": "^2.22.1",
+    "firebase-admin": "^9.8.0",
     "next": "10.2.0",
+    "p5": "^1.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-burger-menu": "^3.0.6",
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "sass": "^1.34.0",
+    "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "prettier": "2.3.1"
   }
 }
