First released version

--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,10 @@
 {
-    "hosting": {
-      "public": "src/public",
-      "rewrites": [
-        {
-          "source": "**/**",
-          "function": "next"
-        }
-      ],
-      "ignore": [
-        "firebase.json",
-        "**/.*",
-        "**/node_modules/**"
-      ]
-    },
-    "functions": {
-      "source": "src/functions"
-    }
+  "hosting": {
+    "public": "out",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
+}
