--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "build-and-export": "next build && next export",
+    "build-export-deploy": "NODE_ENV=production && next build && next export && firebase deploy"
   },
   "dependencies": {
+    "cloudinary-react": "^1.7.0",
     "date-fns": "^2.22.1",
     "firebase-admin": "^9.8.0",
     "next": "10.2.0",
