--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "build-export-deploy": "NODE_ENV=production && next build && next export && firebase deploy"
   },
   "dependencies": {
-    "cloudinary-react": "^1.7.0",
     "date-fns": "^2.22.1",
     "firebase-admin": "^9.8.0",
+    "glslify-loader": "^2.0.0",
     "next": "10.2.0",
     "p5": "^1.3.1",
+    "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
     "sass": "^1.34.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "three": "^0.142.0"
   },
-  "devDependencies": {
-    "prettier": "2.3.1"
-  }
+  "devDependencies": {}
 }
