--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "export": "next export",
     "build-and-export": "next build && next export",
-    "build-export-deploy": "NODE_ENV=production && next build && next export && firebase deploy"
+    "build-export-deploy": "NODE_ENV=production && next build && next export && vercel --prod"
   },
   "dependencies": {
     "date-fns": "^2.22.1",
