--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "export": "next export",
     "build-and-export": "next build && next export",
@@ -15,6 +16,7 @@
     "firebase-admin": "^9.8.0",
     "glslify-loader": "^2.0.0",
     "next": "10.2.0",
+    "next-sitemap": "^3.1.32",
     "p5": "^1.3.1",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "eslint": "^8.29.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1"
   }
